# qtqrencode

./: CMakeLists.txt  LICENSE  README.md  qtqrencode.cpp  qtqrencode.h  qtqrencode.pri  qtqrencode.pro  qtqrencode_p.h
qqrencode/: qqrencode.cpp  qqrencode.h  qqrencode.pro
src/: CMakeLists.txt  qqrencode.cpp  qqrencode.h  qqrencode_global.h  qqrencode_p.h
test/: main.cpp  qqrencodetestsuite.cpp  test.pro  testrunner.h
tests/: CMakeLists.txt  main.cpp  qqrencodetestsuite.cpp  qqrencodetestsuite.h  testrunner.cpp  testrunner.h
